# open-realtime

./: README.md  env.example  events.py  items.py  llm_engine.py  main.py  pyproject.toml  requirement.runpod.txt  requirement.txt  server.py  session.py  stt_engine.py  test_realtimeid.py  tts_engine.py  tts_processor.py  uv.lock.runpod
audio/: utils.py
audio/resamplers/: base_audio_resampler.py  resampy_resampler.py  soxr_resampler.py
audio/vad/: silero.py  vad_analyzer.py
engine/: mock_engine.py  qwen_omni.py  utils.py
stt/: language.py  whisper.py
tts/: elevenlabs_tts.py  openai_tts.py  test_tts_engine.py
utils/: __init__.py  id_generator.py  string.py  test_id_generator.py  test_punctuation.py  test_string.py
