[project]
name = "realtime-llm"
version = "0.1.0"
description = "Realtime api regarding to OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "onnxruntime>=1.22.0",
    "pyloudnorm>=0.1.1",
    "resampy>=0.4.3",
    "soxr>=0.5.0.post1",
    "uvicorn[standard]>=0.34.2",
]
